--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -16,9 +16,9 @@
             <li nz-menu-item>Team 2</li>
           </ul>
         </li>
-        <li nz-menu-item>
+        <li (click)="logout()" nz-menu-item>
           <i nz-icon nzType="file"></i>
-          <span>File</span>
+          <span>Odjavi se</span>
         </li>
       </ul>
     </nz-sider>
