--- a/Frontend/src/app/auth/registration/registration.component.html
+++ b/Frontend/src/app/auth/registration/registration.component.html
@@ -76,6 +76,6 @@
       </label>
       <br />
       <br />
-      <button style="margin-left: 25%;" (click)="submitForm()" nz-button nzType="default" [disabled]="!validateForm.valid">Prijavi se!</button>
+      <button style="margin-left: 25%;" (click)="submitForm()" nz-button nzType="primary" nzGhost [disabled]="!validateForm.valid">Prijavi se!</button>
   </div>
 </div>
